--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,26 +11,13 @@
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
-
-      <p style="font-size: 80%;">
-        <a href="{{ '/' | relative_url }}">« {{ site.title}} </a>
-      </p>
-
-      <h2>Punk Week {{ page.date | date: '%W/%Y'  }}</h2>
-      <h1>{{ page.title }}</h1>
+      <h1>{{ site.title }}</h1>
 
       {{ content }}
-
 
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
         This site is open source. {% github_edit_link "Improve this page" %}.
       </div>
-
-
-      <p style="font-size: 80%;">
-        <a href="{{ '/' | relative_url }}">« {{ site.title}} </a>
-      </p>
-
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
