--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@
 
 
       <p style="font-size: 80%; margin-bottom: 0;">
-        {% assign day = page.date | date: "%-d"  %}
+        {% assign day = page.date | date: '%-d' %}
         {{ page.date | date: '%A, %B' }}
         {% case day %}
           {% when '1' or '21' or '31' %}{{ day }}st,
@@ -28,9 +28,15 @@
           {% when '3' or '23' %}{{ day }}rd,
           {% else %}{{ day }}th,
         {% endcase %}
-        {{ page.date | date: "%Y" }}
+        {{ page.date | date: '%Y' }}
       </p>
       <h1 style="padding-top: 0; margin-top: 0;">{{ page.title }}</h1>
+
+      {{ if post.image }}
+         <img src="{{ 'i/' | append: post.image | relative_url }}">
+      {{ endif }}
+
+
 
       {{ content }}
 
