--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,9 +32,9 @@
       </p>
       <h1 style="padding-top: 0; margin-top: 0;">{{ page.title }}</h1>
 
-      {{ if post.image }}
-         <img src="{{ 'i/' | append: post.image | relative_url }}">
-      {{ endif }}
+      {% if page.image %}
+         <img src="{{ 'i/' | append: page.image | relative_url }}">
+      {% endif %}
 
 
 
