--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,6 +49,14 @@
       </div>
 -->
 
+<h2>
+  Questions? Comments?
+</h2>
+<p>
+  Post them on the
+  <a href="https://old.reddit.com/r/CryptoPunksDev">CryptoPunksDev reddit</a>. Thanks.
+</p>
+
 
       <p style="font-size: 80%;">
         <a href="{{ '/' | relative_url }}">« {{ site.title}} </a>
