--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,7 +54,7 @@
 </h2>
 <p>
   Post them on the
-  <a href="https://old.reddit.com/r/CryptoPunksDev">CryptoPunksDev reddit</a>. Thanks.
+  <a href="https://old.reddit.com/r/CryptoPunksDev"><b>CryptoPunksDev reddit</b></a>. Thanks.
 </p>
 
 
