--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,13 +6,14 @@
 
 {% seo %}
 
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
 
-      {{ content }}
+      <!-- try to fix broken left-over .md links - changing extions to .html-->
+      {{ content | replace: '.md">', '.html">' }}
 
       <!--
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
